--- a/test_connection/Makefile
+++ b/test_connection/Makefile
@@ -1,5 +1,5 @@
 SOLUTION = test_connection
-TARGET = SEND
+SELF_ADDR = 1
 
 CC_TOOL = /opt/cc-tools/bin/cc-tool
 
@@ -8,14 +8,19 @@ SRC = $(wildcard *.c)
 SDCCCFLAGS += -I../hal_cc2530/
 SDCCCFLAGS += -L../hal_cc2530/
 SDCCCFLAGS += hal_cc2530.lib
-SDCCCFLAGS += -D$(TARGET)
+SDCCCFLAGS += -DSELF_ADDR=$(SELF_ADDR)
 
 $(SOLUTION).hex: $(SRC)
 	sdcc-sdcc $(SDCCCFLAGS) $<
 	sdcc-packihx $(SOLUTION).ihx > $(SOLUTION).hex
 
+.PHONY:burn
 burn: $(SOLUTION).hex
 	sudo $(CC_TOOL) -e -w $^ -v
+	sudo $(CC_TOOL) --reset
+
+.PHONY:reset
+reset:
 	sudo $(CC_TOOL) --reset
 
 sim: $(SOLUTION).hex
